Changes the gitignore file to allow commit Dockerfile of the terrama2 base docker.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # Generated files
 conf/terrama2_webapp.json
-terrama2/Dockerfile
+#terrama2/Dockerfile
 webapp/Dockerfile
 webmonitor/Dockerfile
 
